--- a/package.json
+++ b/package.json
@@ -18,14 +18,11 @@
   "dependencies": {
     "@mdx-js/react": "^3.0.1",
     "autoprefixer": "^10.4.19",
+    "figlet": "^1.7.0",
     "gatsby": "^5.13.5",
-    "gatsby-plugin-google-gtag": "^5.13.1",
     "gatsby-plugin-image": "^3.13.1",
-    "gatsby-plugin-manifest": "^5.13.1",
-    "gatsby-plugin-mdx": "^5.13.1",
     "gatsby-plugin-postcss": "^6.13.1",
     "gatsby-plugin-sharp": "^5.13.1",
-    "gatsby-plugin-sitemap": "^6.13.1",
     "gatsby-source-filesystem": "^5.13.1",
     "gatsby-transformer-sharp": "^5.13.1",
     "postcss": "^8.4.38",
@@ -34,6 +31,7 @@
     "tailwindcss": "^3.4.3"
   },
   "devDependencies": {
+    "@types/figlet": "^1.5.8",
     "@types/node": "^20.11.19",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
