updating wrangler directory

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -23,4 +23,4 @@ jobs:
         uses: cloudflare/wrangler-action@v3
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          command: pages deploy public --project-name=heyitsgeo
+          command: pages deploy ./public --project-name=heyitsgeo
